# NeurolingsCE

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Makefile  README.md  README_EN.md  VERSION.txt  common.mk
.github/workflows/: build-debug.yaml  build-release.yaml
cmake/: AppImage.cmake  ConfigureFile.cmake  DownloadLinuxdeploy.cmake  LinuxPlatform.cmake  RenameAppImage.cmake  bin2cpp.cmake  version.cmake
cmake/ElaWidgetToolsBuild/: CMakeLists.txt
cmake/libshimejifinder/: CMakeLists.txt
include/shijima-qt/: AppLog.hpp  PlatformWidget.hpp  ShijimaContextMenu.hpp  ShijimaManager.hpp  ShijimaWidget.hpp  SpeechBubbleWidget.hpp
include/shijima-qt/ui/dialogs/common/: ForcedProgressDialog.hpp
include/shijima-qt/ui/dialogs/inspector/: ShimejiInspectorDialog.hpp
include/shijima-qt/ui/dialogs/licenses/: ShijimaLicensesDialog.hpp
include/shijima-qt/ui/mascot/: ShijimaWidget.hpp
include/shijima-qt/ui/menus/: ShijimaContextMenu.hpp
include/shijima-qt/ui/widgets/: SpeechBubbleWidget.hpp
libshijima/: .gitignore  CMakeLists.txt  main.cc
libshijima/rapidxml/: rapidxml_print.hpp
libshijima/shijima/: animation.cc  log.hpp  math.hpp  parser.cc  pose.hpp  shijima.hpp  translator.cc  translator.hpp
libshijima/shijima/action/: action.hpp  animate.cc  animation.cc  base.cc  base.hpp  fall.hpp  jump.hpp  look.cc  look.hpp  move.hpp  movewithturn.cc  movewithturn.hpp  offset.cc  reference.cc  reference.hpp  resist.hpp  scanmove.hpp  selfdestruct.cc  selfdestruct.hpp  sequence.hpp  stay.cc  transform.cc  transform.hpp  turn.cc
libshijima/shijima/behavior/: base.hpp  behavior.hpp  list.cc  list.hpp  manager.cc  manager.hpp
libshijima/shijima/broadcast/: client.cc  interaction.cc  interaction.hpp  manager.cc  server.hpp  server_state.hpp
libshijima/shijima/mascot/: factory.cc  factory.hpp  manager.cc  manager.hpp  state.cc  tick.hpp
libshijima/shijima/scripting/: variables.hpp
libshijima/shijima/scripting/duktape/: duktape.cc
libshimejifinder/: .gitignore  CMakeLists.txt  README.md  bin2cpp.sh  main.cc  test_utf8_convert.sh
libshimejifinder/libarchive/libarchive/: CMakeLists.txt
libshimejifinder/shimejifinder/: analyze.cc  analyze.hpp  archive.cc  archive.hpp  archive_entry.cc  archive_entry.hpp  archive_folder.cc  archive_folder.hpp  extract_target.cc  extract_target.hpp  extractor.cc  extractor.hpp  fs_extractor.cc  fs_extractor.hpp  memory_extractor.cc  memory_extractor.hpp  shimejifinder.hpp  utf8_convert.hpp  utils.cc  utils.hpp
libshimejifinder/shimejifinder/libarchive/: archive.cc  archive.hpp
libshimejifinder/shimejifinder/libunarr/: archive.cc  archive.hpp  unarr_FILE.c  unarr_FILE.h
libshimejifinder/shimejifinder/utf8_convert/: iconv.cc  icu.cc  jni.cc
libshimejifinder/tests/utf8_convert/: tests.cc
libshimejifinder/tests/utf8_convert/iconv/: CMakeLists.txt
libshimejifinder/tests/utf8_convert/icu/: CMakeLists.txt  main.cc
libshimejifinder/tests/utf8_convert/jni/: CMakeLists.txt  main.cc
libshimejifinder/unarr/: CMakeLists.txt
src/app/: ManagerState.hpp  ShijimaContextMenu.cc  ShijimaHttpApi.cc  ShijimaLicensesDialog.cc  ShijimaManager.cc  ShijimaManagerInternal.hpp  ShijimaManagerState.hpp  ShijimaWidget.cc  ShimejiInspectorDialog.cc  SpeechBubbleWidget.cc  cli.cc  main.cc
src/app/core/: AppLog.cc
src/app/core/assets/: Asset.cc  AssetLoader.cc  MascotData.cc
src/app/core/audio/: SoundEffectManager.cc
src/app/core/http/: ShijimaHttpApi.cc
src/app/core/import/: SimpleZipImporter.cc
src/app/core/shijima-engine/: README.libshijima.md
src/app/core/shijima-engine/shijima/: animation.hpp  config.hpp  hotspot.cc  hotspot.hpp  log.cc  parser.hpp  xml_doc.hpp
src/app/core/shijima-engine/shijima/action/: animate.hpp  animation.hpp  breed.cc  breed.hpp  dragged.cc  dragged.hpp  fall.cc  instant.cc  instant.hpp  interact.cc  interact.hpp  jump.cc  move.cc  offset.hpp  resist.cc  scanmove.cc  select.cc  select.hpp  sequence.cc  stay.hpp  turn.hpp
src/app/core/shijima-engine/shijima/behavior/: base.cc
src/app/core/shijima-engine/shijima/broadcast/: client.hpp  manager.hpp  server.cc
src/app/core/shijima-engine/shijima/mascot/: environment.hpp  (+1 more)
src/app/runtime/: ManagerEnvironmentSync.cc  ManagerImportWorkflow.cc  ManagerLifecycle.cc  ManagerMascotRuntime.cc  ManagerRuntimeHelpers.hpp  ManagerRuntimeState.hpp  ShijimaManagerEnvironment.cc  ShijimaManagerImport.cc  ShijimaManagerLifecycle.cc  ShijimaManagerMascots.cc  ShijimaManagerRuntimeInternal.hpp
src/app/ui/: ManagerTrayIcon.cc  ManagerUiActions.cc  ManagerUiHelpers.hpp  ManagerUiState.hpp  ManagerWindowSetup.cc  ShijimaManagerActions.cc  ShijimaManagerPages.cc  ShijimaManagerTray.cc  ShijimaManagerUiInternal.hpp  ShijimaManagerWindow.cc
src/app/ui/dialogs/common/: ForcedProgressDialog.cc
src/app/ui/dialogs/inspector/: ShimejiInspectorDialog.cc  ShimejiInspectorDialogRows.cc  ShimejiInspectorFormatting.hpp
src/app/ui/dialogs/licenses/: ShijimaLicensesDialog.cc
src/app/ui/interface/: ManagerAboutSection.cc  ManagerHomePage.cc  ManagerNavigation.cc  ManagerSettingsPage.cc  ShijimaManagerAboutPage.cc  ShijimaManagerHomePage.cc  ShijimaManagerSettingsPage.cc
src/app/ui/mascot/: MascotWidgetInteraction.cc  MascotWidgetLifecycle.cc  MascotWidgetRendering.cc  ShijimaWidgetInteraction.cc  ShijimaWidgetLifecycle.cc  ShijimaWidgetRendering.cc
src/app/ui/menus/: ContextMenuActions.cc  ShijimaContextMenu.cc
src/app/ui/widgets/: SpeechBubbleWidget.cc  SpeechBubbleWidgetText.cc
src/packaging/: io.github.qingchenyouforcc.NeurolingsCE.desktop.in  io.github.qingchenyouforcc.NeurolingsCE.metainfo.xml  io.github.qingchenyouforcc.NeurolingsCE.metainfo.xml.in
src/packaging/NeurolingsCE.app/Contents/: Info.plist  Info.plist.in
src/platform/Platform/: Makefile
src/platform/Platform/Linux/: GNOMEWindowObserverBackend.cc  PrivateActiveWindowObserver.cc
src/platform/Platform/Linux/gnome_script/: metadata.json  metadata.json.in
src/resources/: bubbles.txt  resources.qrc  resources.rc  resources.rc.in
src/tools/: generate-metainfo.sh
translations/: shijima-qt_zh_CN.ts
(+5 files in other folders)
